# coding_agent_session_search

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  install.sh
.beads/: last-touched
.github/workflows/: browser-tests.yml  ci.yml  release.yml
benches/: index_perf.rs
docs/: PROOF_RECIPE.md  ROBOT_MODE.md  perf-evidence-ledgers.md
docs/planning/: ANSWER_PACKS_CONFORMANCE_MATRIX.md  ANSWER_PACKS_CONTRACT.md  IDEA_WIZARD_SWARM_NEXT_LEVEL.md  PLAN_TO_ADD_LIGHTWEIGHT_SEMANTIC_AND_HYBRID_SEARCH_TO_CASS.md  SWARM_OPERATIONS_CONTRACT.md
scripts/: bench-report.sh  e2e_logging_acceptance_test.sh  migration_e2e_validate.sh  test-all.sh  test-pages-e2e.sh  validate-e2e-jsonl.sh  validate_ci.sh
scripts/bakeoff/: cass_embedder_e2e.sh  cass_validation_e2e.sh
scripts/e2e/: connector_stress.sh  doctor_v2.sh  e2e_logging_acceptance_test.sh  full_coverage_validation.sh  multi_machine_sync.sh  query_parser_e2e.sh  security_paths_e2e.sh
scripts/git-hooks/: install.sh  pre-push.sh
scripts/tests/: 8tgic_simd_tests_e2e.sh  cuu3f_prepush_hook_e2e.sh  run_all.sh  vz9t8_1_wcag_aa_e2e.sh  waijq_f16_preconvert_e2e.sh  yvv7r_rollback_envvars_e2e.sh
src/: context_pack.rs  crash_replay.rs  daemon_runtime_state.rs  dependency_pin_correlation.rs  doctor_chokepoint.rs  doctor_recover.rs  doctor_robot_docs.rs  doctor_runs.rs  doctor_undo.rs  e2e_runner.rs  encryption.rs  evidence_bundle.rs  export.rs  fleet_archive_coverage.rs  fleet_doctor_schema.rs  fleet_platform_compat.rs  fleet_probe.rs  fleet_version_skew.rs  ftui_harness.rs  guide_planner.rs  incident_discovery.rs  lessons.rs  lib.rs  main.rs  policy_registry.rs  privacy_exposure.rs  proof_artifact.rs  raw_mirror.rs  recovery_support_bundle.rs  release_verify.rs  repro_capsule.rs  robot_budget_envelope.rs  root_cause_projection.rs  root_cause_taxonomy.rs  search_quality_eval.rs  source_doctor_health.rs  source_onboarding.rs  swarm_replay_fixture.rs  swarm_status.rs  top_session_summary.rs  (+5 more)
src/analytics/: validate.rs
src/connectors/: antigravity.rs  codex.rs  hermes.rs  mod.rs
src/daemon/: client.rs  core.rs  protocol.rs
src/html_export/: filename.rs  renderer.rs  scripts.rs  styles.rs
src/indexer/: mod.rs  quarantine.rs  quarantine_retry.rs  responsiveness.rs  semantic.rs  semantic_progress.rs
src/model/: cli_error_kind.rs
src/pages/: attachments.rs  bundle.rs  config_input.rs  deploy_cloudflare.rs  deploy_github.rs  encrypt.rs  export.rs  key_management.rs  profiles.rs  qr.rs  redact.rs  size.rs  wizard.rs
src/pages_assets/: auth.js  crypto_worker.js  stats.js
src/search/: asset_state.rs  e2e_scenarios.rs  human_readiness_summary.rs  mod.rs  model_acquisition.rs  model_download.rs  pack_planner.rs  proof_log.rs  query.rs  readiness.rs  readiness_projection.rs  runtime_optimizations.rs  salvage_ledger.rs  search_mode_metadata.rs  semantic_manifest.rs  tantivy.rs
src/sources/: config.rs  index.rs  install.rs  probe.rs  sync.rs
src/storage/: sqlite.rs
src/ui/: analytics_charts.rs  app.rs  trace.rs
src/ui/components/: theme.rs  toast.rs
tests/: agents_md_documents_commit_convention.rs  cli_dispatch_coverage.rs  cli_doctor.rs  cli_doctor_budget.rs  cli_flag_precedence.rs  cli_index.rs  cli_robot.rs  cli_robot_log_hygiene.rs  cli_status.rs  cli_status_budget.rs  cli_trace_file.rs  cli_view_archive.rs  cli_view_budget.rs  connector_antigravity.rs  connector_edge_cases_log_freshness.rs  connector_hermes.rs  coordination_intelligence_gate.rs  crypto_tracing_safety.rs  docs_safety_invariants.rs  doctor_e2e_runner.rs  doctor_fixtures_round_trip.rs  doctor_mutate_auditor.rs  doctor_pass1_runs_integration.rs  doctor_release_checklist.rs  e2e_analytics_models.rs  e2e_fleet_upgrade_rehearsal_gate.rs  e2e_guide_gate.rs  e2e_health.rs  e2e_onboarding_gate.rs  e2e_repro_capsule_gate.rs  e2e_robot_recovery_gate.rs  e2e_search_index.rs  e2e_search_quality_gate.rs  e2e_search_trust_meta_gate.rs  e2e_smoke_runner_contract.rs  e2e_sources.rs  e2e_ssh_sources.rs  e2e_support_bundle_gate.rs  e2e_tui_smoke_flows.rs  golden_robot_docs.rs  (+21 more)
tests/doctor_fixtures/: README.md
tests/doctor_fixtures/fm-analytics-frankensqlite-aggregate-only/: README.md
tests/doctor_fixtures/fm-analytics-token-rollup-gap/: README.md
tests/doctor_fixtures/fm-bookmarks-stale-source-path/: README.md
tests/doctor_fixtures/fm-cli_robot-introspect-golden-drift/: README.md
tests/doctor_fixtures/fm-cli_robot-schema-version-missing-doctor-root/: README.md
tests/doctor_fixtures/fm-connectors-aider-external-id-collision/: README.md
tests/doctor_fixtures/fm-connectors-malformed-session-json/: README.md
tests/doctor_fixtures/fm-daemon-socket-stale/: README.md
tests/doctor_fixtures/fm-daemon-stale-pidfile/: README.md
tests/doctor_fixtures/fm-html_export-output-not-writable/: README.md
tests/doctor_fixtures/fm-indexer-backup-retention-overflow/: README.md
tests/doctor_fixtures/fm-indexer-lexical-publish-atomic-swap-failure/: README.md
tests/doctor_fixtures/fm-indexer-semantic-vector-partial-build/: README.md
tests/doctor_fixtures/fm-models-checksum-mismatch/: README.md
tests/doctor_fixtures/fm-models-missing-files/: README.md
tests/doctor_fixtures/fm-pages-key-management-nonce-type/: README.md
tests/doctor_fixtures/fm-search-embedder-registry-failure/: README.md
tests/doctor_fixtures/fm-search-empty-fast-unwrap/: README.md
tests/doctor_fixtures/fm-search-fsvi-not-found/: README.md
tests/doctor_fixtures/fm-sources-toml-malformed/: README.md
tests/doctor_fixtures/fm-storage-db-bloat/: README.md
tests/doctor_fixtures/fm-storage-fixable-corruption/: README.md
tests/doctor_fixtures/fm-storage-frankensqlite-openread-cursor/: README.md
tests/doctor_fixtures/fm-storage-pragma-integrity-fail/: README.md
tests/doctor_fixtures/fm-storage-stale-wal-shm/: README.md
tests/doctor_fixtures/fm-tui-state-json-corrupt/: README.md
tests/doctor_fixtures/fm-update_check-clock-rollback/: README.md
tests/e2e/accessibility/: aria-live.spec.ts  keyboard-nav.spec.ts  (+1 more)
tests/util/: doctor_fixture.rs  mod.rs  timeout.rs
(+142 files in other folders)
